[package]
name = "raycaster"
version = "0.1.0"
authors = ["Galizzi Guillermo <galizzi.guillermo@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.9.3"
tetra = { git = 'https://github.com/GGalizzi/tetra', branch= 'relative-mouse-motion' }

[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"